# QSyncUi

./: .gitignore  CMakeLists.txt  CMakePresets.json  DockerFile  Dockerfile  SyncThread.cpp  SyncThread.h  apirequest.cpp  apirequest.h  apiresponse.cpp  apiresponse.h  avatarImage.qrc  awsutils.cpp  awsutils.h  bucket.h  build.bat  cancelaccount_win.cpp  cancelaccount_win.h  cloudfile.cpp  cloudfile.h  cloudlistener.cpp  cloudlistener.h  config.nsh  core.cpp  core.h  cosclient.cpp  cosclient.h  crc64util.cpp  crc64util.h  databasemanager.cpp  databasemanager.h  dircardproxy.cpp  dircardproxy.h  filecard.cpp  filecard.h  filecardproxy.cpp  filecardproxy.h  filefunc.cpp  filefunc.h  filemange_view.cpp  (+72 more)
.github/workflows/: build.yaml  dockerbuild.yaml  without-sdk.yaml
ext/: 1.0.2-CHANGELOG  1.0.3-CHANGELOG
